--- a/src/css/_header.styl
+++ b/src/css/_header.styl
@@ -26,7 +26,7 @@
 .header-logout-button
 	color $white
 	// height 100%
-	background-color $red
+	background-color $red0
 	// padding 10px
 
 .header-back-button
