--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -2,12 +2,19 @@
 	align-self center
 	{$flex-col-wrap}
 	align-items center
-	justify-content center
+	justify-content space-around
+	
+.login-title
+	flex 1
+	line-height 6rem !important
+	text-align center
+	font-size 6rem !important
+	margin 20px !important
 
 .login-facebook,
 .login-google
 	width 60%
-	flex 0 1 50px
+	flex 0 1 15vmin
 	margin 5px
 	border-radius 5px
 	border 0
