--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -40,7 +40,7 @@
 			font-size 10px
 
 body {
-	background-color $black1
+	background-color $black2
 }
 
 * {
@@ -99,6 +99,9 @@ ul
 	list-style none
 	// margin 0
 	// padding 0
+		
+label
+	font-family $title
 
 .react-root
 	display flex
