--- a/src/css/_settings.styl
+++ b/src/css/_settings.styl
@@ -8,19 +8,19 @@
 	width 100%
 	flex 0.25 1
 	{$flex-row-wrap}
-	justify-content space-between
+	justify-content space-around
 	align-items center
 	color $black4
 
 .settings-label
 	font-size 1.5rem
-	flex 0 1 40%
+	flex 0.25 1 25%
 	text-align right
-	margin 0 !important
+	margin 0 10px 0 0 !important
 
 .settings-input
 	{$input}
-	flex 0 1 50%
+	flex 0.5 1 50%
 
 .settings-heading
 	width 90%
