--- a/src/css/style.css
+++ b/src/css/style.css
@@ -438,6 +438,39 @@
   border: 1px solid #dbcdc9 !important;
   text-align: center !important;
 }
+.error-page {
+  height: 75vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.error-page__header {
+  width: 100%;
+  margin-bottom: 2vh;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1;
+          flex: 0 1;
+  text-align: center;
+}
+.error-page__p {
+  color: #dbcdc9;
+  max-width: 75%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1;
+          flex: 0 1;
+  font-size: 1.25rem;
+  text-align: center;
+}
 .footer {
   position: fixed;
   bottom: 0;
@@ -545,12 +578,12 @@
 }
 .app-home {
   height: 100%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 97.5%;
+          flex: 0 1 97.5%;
 }
 @media all and (orientation: landscape) {
   .app-home {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 97.5%;
-            flex: 0 1 97.5%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -587,6 +620,7 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  width: 100%;
 }
 .home__recent-timers > h1,
 .home__favorite-timers > h1 {
@@ -761,17 +795,123 @@
 }
 .login-create-account {
   color: #7a8897;
-  text-decoration: underline;
 }
 .login-create-account:hover {
   text-decoration: underline;
   cursor: pointer;
 }
+.login-manual {
+  color: #b7402c;
+}
 .login-p {
-  font-size: 1rem;
-  width: 60%;
+  font-size: 1.5rem;
+  width: 80%;
   text-align: center;
   color: #a5a5a5;
+}
+.login-account__overlay {
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  z-index: 1000;
+  width: 100vw;
+  background-color: rgba(112,112,112,0.8);
+}
+.login-create-account__form {
+  position: fixed;
+  left: 5%;
+  right: 5%;
+  top: 15vh;
+  margin: 0 auto;
+  background-color: #161616;
+  border: 3px solid #22633e;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  z-index: 1001;
+  padding: 15px;
+}
+.login-create-account__form > h1 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 100%;
+          flex: 0 1 100%;
+  text-align: center;
+  margin: 2vh;
+}
+.login-create-account__label {
+  -webkit-box-flex: 0.25;
+      -ms-flex: 0.25 1 20%;
+          flex: 0.25 1 20%;
+  text-align: right;
+  color: #dbcdc9;
+  margin-bottom: 1.5vh !important;
+}
+.login-create-account__input {
+  height: 6vmax !important;
+  border-radius: 2px !important;
+  border: 1px solid #dbcdc9 !important;
+  background-color: transparent !important;
+  color: #ab8b82 !important;
+  margin: 0 !important;
+  font-size: 1rem !important;
+  margin-bottom: 1.5vh !important;
+  -webkit-box-flex: 0.25;
+      -ms-flex: 0.25 1 60%;
+          flex: 0.25 1 60%;
+}
+.login-create-account__input:focus,
+.login-create-account__input:active {
+  color: #dbcdc9 !important;
+  outline: none !important;
+  box-shadow: 0px 0px 1px 1px #dbcdc9 !important;
+  margin: 0 !important;
+}
+.login-create-account__input::-moz-selection {
+  background-color: #fff;
+  color: #282828;
+}
+.login-create-account__input::selection {
+  background-color: #fff;
+  color: #282828;
+}
+.login-create-account__input:focus {
+  margin-bottom: 1.5vh !important;
+}
+.login-create-account__button {
+  color: #dbcdc9;
+  border: 2px solid #dbcdc9;
+  padding: 2vmin;
+  background-color: transparent;
+  font-size: 1.25rem;
+  font-family: Lato;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 75%;
+          flex: 0 1 75%;
+}
+.login-create-account__button:active,
+.login-create-account__button:focus {
+  outline: none !important;
+  box-shadow: 0px 0px 1px 1px #dbcdc9;
+}
+#password-visibility {
+  text-decoration: underline;
+  font-size: 1rem;
+}
+.login-hide-form {
+  padding: 1px;
+  background-color: transparent;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  font-size: 1.5rem;
+  color: #b7402c;
 }
 .app-profile {
   display: -webkit-box;
@@ -1301,9 +1441,6 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1441,9 +1578,8 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1451,11 +1587,11 @@
 }
 .settings-label {
   font-size: 1.5rem;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 40%;
-          flex: 0 1 40%;
+  -webkit-box-flex: 0.25;
+      -ms-flex: 0.25 1 25%;
+          flex: 0.25 1 25%;
   text-align: right;
-  margin: 0 !important;
+  margin: 0 10px 0 0 !important;
 }
 .settings-input {
   height: 6vmax !important;
@@ -1465,9 +1601,9 @@
   color: #ab8b82 !important;
   margin: 0 !important;
   font-size: 1rem !important;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 50%;
-          flex: 0 1 50%;
+  -webkit-box-flex: 0.5;
+      -ms-flex: 0.5 1 50%;
+          flex: 0.5 1 50%;
 }
 .settings-input:focus,
 .settings-input:active {
