--- a/src/css/_createTimer.styl
+++ b/src/css/_createTimer.styl
@@ -3,7 +3,7 @@
 	{$flex-col}
 	overflow-y auto
 	align-items flex-start
-	justify-content center
+	// justify-content center
 
 .create-timer-heading
 	align-self center
