--- a/src/css/_home.styl
+++ b/src/css/_home.styl
@@ -1,8 +1,8 @@
 .app-home
+	{$flex-row-wrap}
 	flex 0 1 97.5%
 	overflow-y auto
 	@media all and (orientation landscape)
-		{$flex-row-wrap}
 		justify-content space-around
 
 .home__recent-timers,
@@ -31,7 +31,7 @@
 	{$flex-row-wrap}
 	align-items flex-start
 	justify-content center
-	overflow-y auto
+	// overflow-y auto
 	width 97.5%
 	// @media all and (orientation landscape)
 	// 	flex 0 1 100%
