--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -65,8 +65,9 @@
 		margin 2vh
 		
 .login-create-account__label
-	flex 0.25 1 20%
+	flex 0 1 30%
 	text-align right
+	margin-right 5px
 	color $white
 	margin-bottom 1.5vh !important
 	
