okay... last one

--- a/src/css/_home.styl
+++ b/src/css/_home.styl
@@ -8,9 +8,9 @@
 .home__recent-timers,
 .home__favorite-timers
 	color $white
-	{$flex-col}
-	align-items center
-	justify-content flex-start
+	{$flex-row-wrap}
+	align-items flex-start
+	justify-content center
 	flex 0 1 97.5%
 	& > h1
 		flex 0 1 100%
@@ -32,7 +32,7 @@
 	align-items flex-start
 	justify-content center
 	// overflow-y auto
-	width 97.5%
+	flex 0 1 100%
 	// @media all and (orientation landscape)
 	// 	flex 0 1 100%
 	// @media all and (orientation portrait)
