--- a/src/css/style.css
+++ b/src/css/style.css
@@ -744,8 +744,6 @@
   color: #22633e;
 }
 .app-login {
-  -ms-flex-item-align: center;
-      align-self: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -760,6 +758,11 @@
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+}
+@media all and (orientation: portrait) {
+  .app-login {
+    margin-top: 15vh;
+  }
 }
 .login-title {
   -webkit-box-flex: 1;
