--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -1,8 +1,9 @@
 .app-login
-	align-self center
 	{$flex-col-wrap}
 	align-items center
 	justify-content space-around
+	@media all and (orientation portrait)
+		margin-top 15vh
 	
 .login-title
 	flex 1
