--- a/src/css/_savedTimers.styl
+++ b/src/css/_savedTimers.styl
@@ -48,7 +48,7 @@
 	padding 0
 	overflow-y auto
 	{$flex-row-wrap}
-	// align-items flex-end
+	align-items flex-start
 	justify-content center
 	
 .saved-timers__li
