--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -46,7 +46,7 @@
 	width 100vw
 	background-color rgba(112, 112, 112, 0.8)
 
-.login-create-account__form
+.login-manual-account__form
 	position fixed
 	left 5%
 	right 5%
@@ -72,7 +72,7 @@
 	color $white
 	margin-bottom 1.5vh !important
 	
-.login-create-account__input
+.login-manual-account__input
 	{$input}
 	// padding 2px
 	margin-bottom 1.5vh !important
@@ -80,7 +80,8 @@
 	&:focus
 		margin-bottom 1.5vh !important
 
-.login-create-account__button
+.login-manual-account__button
+	margin-top 25px
 	{$button}
 	flex 0 1 75%
 
